--- a/Configs/BMNet.yaml
+++ b/Configs/BMNet.yaml
@@ -6,8 +6,8 @@ INLR: 1e-3
 # Interactive Adaptation Gradient Steps
 INGS: 30
 # Path for data
-DATA_ROOT_DIR: 'D:/ICA_data/data'
+DATA_ROOT_DIR: '/data/add_disk1/yifeng/ICA_data/'
 # Path for log
-LOG_DIR: './log'
+LOG_DIR: './ICA_log'
 # Path for checkpoints
-CP_DIR: 'D:/ICA_data\checkpoints'
+CP_DIR: '/data/add_disk1/yifeng/ICA_checkpoints/'
